Added heading DIEMS

--- a/india.html
+++ b/india.html
@@ -35,5 +35,6 @@
         Magnam veritatis beatae dolorum numquam aperiam, perspiciatis officia blanditiis exercitationem aliquid repudiandae natus aliquam libero consequatur, delectus adipisci necessitatibus enim vel, id esse totam doloribus ipsa ab! Cum, est aspernatur!
         Nobis exercitationem perferendis doloremque odio harum delectus vel, magni dolore consequatur at officia veritatis, laborum asperiores unde enim suscipit perspiciatis voluptas quae pariatur aspernatur officiis aliquid repellat. Sint, quis molestias!</p>
     </div>
+    <h1>DIEMS</h1>
 </body>
 </html>
