--- a/india.html
+++ b/india.html
@@ -36,5 +36,6 @@
         Nobis exercitationem perferendis doloremque odio harum delectus vel, magni dolore consequatur at officia veritatis, laborum asperiores unde enim suscipit perspiciatis voluptas quae pariatur aspernatur officiis aliquid repellat. Sint, quis molestias!</p>
     </div>
     <h1>DIEMS</h1>
+    <p>Welcome to CSE Department</p>
 </body>
 </html>
